<resources>
    <string name="app_name">ivy2testing</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="empty_string" />
    <string name="send">Send</string>
    <string name="contact_us_hint">Feedback, suggestion,…</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="org_sign_up">Organization Sign Up</string>
    <string name="student_sign_up">Student Sign Up</string>
    <string name="resend_verification">Resend Verification Email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="switch_sign_up">We are a club</string>
    <string name="switch_login_org">Organization/Club Login</string>
    <string name="we_club_switch">We\'re a club</string>
    <string name="error_invalidDomain">This domain is not recognizable.</string>
    <string name="error_invalidEmailFormat">Please enter a valid email.</string>
    <string name="error_invalidPasswordLength">Your password must be at least six characters long.</string>
    <string name="error_invalidPasswordMatch">Passwords do not match.</string>
    <string name="error_loginInvalid">Login failed, invalid email or password.</string>
    <string name="error_chooseUni">Please choose a university.</string>
    <string name="error_couldntGetUserData">Couldn\'t get user data. Please contact us!</string>
    <string name="login_gradient_desc">Green to white gradient</string>
    <string name="logo_desc">Ivy Logo</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="quad">Quad</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="posted_by">Posted by:</string>
    <string name="pinned">Pinned Event</string>
    <string name="featured">Featured</string>
    <string name="sort_by">Sort by</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_posts">No posts on this campus, be the first!</string>
    <string name="no_events">No events on this campus at the moment</string>
    <string name="coming_fall">Coming in Fall 2020</string>
    <string name="author">Author</string>
    <string name="reached_bottom">You\'ve reached the bottom!</string>
    <string name="show_in_campus_feed">Show in campus feed?</string>
    <string name="type">Type</string>
    <string name="show">Show</string>
    <string name="dont_show">Don\'t show</string>
    <string name="from_scratch">From scratch</string>
    <string name="imprt">Import</string>
    <string name="import_from_another">Import from another platform?</string>
    <string name="text">Text</string>
    <string name="pin_event">Pin Event</string>
    <string name="change_uni_title">Change Campus</string>
    <string name="confirm">Confirm</string>
    <string name="for_you">For You</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="explore_all">Explore All</string>
    <string name="nobody_going">Nobody\'s going to this event yet.</string>
    <string name="add_to_calendar">Add</string>
    <string name="link_placeholder">Link</string>
    <string name="share">Share</string>
    <string name="whos_going">Who\'s Going:</string>
    <string name="link_optional">Link (optional, include the full url)</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="editProfile">Edit Profile</string>
    <string name="userName">UserName</string>
    <string name="profile_pic">Profile picture</string>
    <string name="see_all">See All</string>
    <string name="degree">Degree</string>
    <string name="edit">Edit</string>
    <string name="posts">Posts</string>
    <string name="member_requests">Member Requests</string>
    <string name="no_notifications_yet">Your notifications will show up here!</string>
    <string name="view_profile">View Profile</string>
    <string name="add_friend">Add Friend</string>
    <string name="message">Message</string>
    <string name="no_users">\No other users registered on your campus yet!\</string>
    <string name="accept_member_request">Accept Member Request</string>
    <string name="reject_member_request">Reject Member Request</string>
    <string name="error_invalidName">Please enter a nonempty Name</string>
    <string name="error_noPosts">No Posts to Display</string>
    <string name="error_getPost">An error occurred while retrieving posts</string>
    <string name="you_are_a_member">You are a member!</string>
    <string name="request_pending">Request Pending</string>
    <string name="join">Join</string>
    <string name="leave_org">Leave</string>
    <string name="full">Full</string>
    <string name="profile_no_posts">No posts yet!</string>
    <string name="profile_private">This profile is private.</string>
    <string name="switch_private_profile">Private Profile</string>
    <string name="notification">Notificaion</string>
    <string name="time">time</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="block_alert_title">Block User?</string>
    <string name="block_alert_message">You will not be able to message this user until you unblock them.</string>
    <string name="post_visual">Post Visual</string>
    <string name="comments">Comments</string>
    <string name="expand_comments">Expand Comments</string>
    <string name="write_comment">Write a Comment…</string>
    <string name="organization_member_number">%1$s Members</string>
    <string name="one_member">1 Member</string>
    <string name="members">Members</string>
    <string name="organization_request_number">Member Requests (%1$s)</string>
    <string name="link">Link:</string>
    <string name="going">Going</string>
    <string name="not_going">Not Going</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="event">Event</string>
    <string name="post_image">Post Image</string>
    <string name="new_post">New Post</string>
    <string name="visual">Visual</string>
    <string name="nothing">Nothing</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="gif">GIF</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="at">at</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="error_noComments">No Comments</string>
    <string name="cant_view_comments">Log in to see the comments!</string>
    <string name="chatroom">Chatroom</string>
    <string name="last_msg">Last Message</string>
    <string name="delete">Delete</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="error_noMessages">Be the first to chat!</string>
    <string name="deleteRoom_title">Delete Conversation?</string>
    <string name="deleteRoom_message">This conversation will be permanently deleted for you.</string>
    <string name="deleteRoom">Conversation deleted</string>
    <string name="error_deleteRoom">Failed to delete Conversation</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="write_message">Aa</string>
    <string name="send_message">Send Message</string>
    <string name="no_conversations_available">No Conversations Available.</string>
    <string-array name="degree_list">
        <item>Accounting</item>
        <item>Actuarial Science</item>
        <item>Ancient and Medieval History</item>
        <item>Anthropology</item>
        <item>Applied Science</item>
        <item>Archeology</item>
        <item>Architecture</item>
        <item>Art History</item>
        <item>Astrophysics</item>
        <item>Biochemistry</item>
        <item>Bioinformatics</item>
        <item>Biology</item>
        <item>Biomechanics</item>
        <item>Biomedical Sciences</item>
        <item>Business Administration</item>
        <item>Business Analytics</item>
        <item>Business Strategy</item>
        <item>Business Technology Management</item>
        <item>Canadian Studies</item>
        <item>Cellular, Molecular, and Microbial Biology</item>
        <item>Chemical Engineering</item>
        <item>Chemistry</item>
        <item>Civil Engineering</item>
        <item>Commerce</item>
        <item>Communication and Media Studies</item>
        <item>Community Rehabilitation</item>
        <item>Computer Science</item>
        <item>Dance</item>
        <item>Dentistry</item>
        <item>Development Studies</item>
        <item>Drama</item>
        <item>Earth Science</item>
        <item>East Asian Studies</item>
        <item>Ecology</item>
        <item>Economics</item>
        <item>Education</item>
        <item>Electrical Engineering</item>
        <item>Energy</item>
        <item>English</item>
        <item>Entrepreneurship and Innovation</item>
        <item>Environmental Design</item>
        <item>Environmental Science</item>
        <item>Exercise and Health Psychology</item>
        <item>Film</item>
        <item>Finance</item>
        <item>French</item>
        <item>Geography</item>
        <item>Geology</item>
        <item>Geomatics</item>
        <item>Geophysics</item>
        <item>German</item>
        <item>Greek and Roman</item>
        <item>Health</item>
        <item>History</item>
        <item>Human Resources</item>
        <item>Indigenous</item>
        <item>International Relations</item>
        <item>Italian</item>
        <item>Kinesiology</item>
        <item>Latin American</item>
        <item>Law</item>
        <item>Law and Society</item>
        <item>Leadership</item>
        <item>Linguistics</item>
        <item>Marketing</item>
        <item>Master\'s Degree</item>
        <item>Mathematics</item>
        <item>Mechanical Engineering</item>
        <item>Medicine</item>
        <item>Multidisciplinary Studies</item>
        <item>Music</item>
        <item>Natural Sciences</item>
        <item>Neuroscience</item>
        <item>Nursing</item>
        <item>Oil and Gas Engineering</item>
        <item>Operations Management</item>
        <item>PhD</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Physiology</item>
        <item>Political Science</item>
        <item>Postdoc</item>
        <item>Psychology</item>
        <item>Planning</item>
        <item>Plant Biology</item>
        <item>Real Estate</item>
        <item>Religious Studies</item>
        <item>Risk Management and Insurance</item>
        <item>Russian</item>
        <item>Social Work</item>
        <item>Sociology</item>
        <item>Software Engineering</item>
        <item>Spanish</item>
        <item>Supply Chain Management</item>
        <item>Urban Studies</item>
        <item>Veterinary Medicine</item>
        <item>Visual Studies</item>
        <item>Women\'s Studies</item>
        <item>Zoology</item>
    </string-array>
    <string name="sample_views">#### Views</string>
</resources>