<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/tab_bar_events"
            android:title="@string/events"
            android:icon="@drawable/ic_calendar"
            />

        <item
            android:id="@+id/tab_bar_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />

        <item
            android:id="@+id/tab_bar_quad"
            android:title="@string/quad"
            android:icon="@drawable/ic_quad"
            />

        <item
            android:id="@+id/tab_bar_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"
            />
    </group>


</menu>