<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_chatmessage_layout"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/item_chatmessage_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"/>

    <TextView
        android:id="@+id/item_chatmessage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_message"
        android:textIsSelectable="true"/>

    <TextView
        android:id="@+id/item_chatmessage_timestamp"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:visibility="gone"/>

</LinearLayout>