<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/uni_change_dialog_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/uni_change_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/uni_change_dialog_title"
            style="@style/LargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="@dimen/large_margin"
            android:gravity="center_horizontal"
            android:text="@string/change_uni_title"
            />

        <Spinner
            android:id="@+id/uni_change_dialog_spinner"
            style="@style/StandardSpinner"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/large_margin"
            android:backgroundTint="@color/hint"
            android:prompt="@string/app_name" />

        <Button
            style="@style/StandardButton"
            android:id="@+id/uni_change_dialog_button"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="@string/confirm"
            android:enabled="false"
            />

    </LinearLayout>


    <ImageView
        android:id="@+id/uni_change_dialog_logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_circle"
        android:padding="3dp"
        android:src="@drawable/ivy_logo" />
</RelativeLayout>